name:                minecart
version:             0.1.0.0
synopsis:            utilities to embelish and transport gingerbread forum data into elasticsearch
homepage:            https://github.com/TechforgoodCAST/minecart#readme
license:             MIT
license-file:        LICENSE
author:              Andrew MacMurray
copyright:           2017 Andrew MacMurray
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Minecart
                     , Minecart.Core
                     , Minecart.Database
                     , Minecart.GoogleCloud
                     , Minecart.Parsers
                     , Minecart.Types
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bloodhound
                     , bytestring
                     , cassava
                     , containers
                     , http-client
                     , http-conduit
                     , pipes
                     , postgresql-simple
                     , text
                     , time
                     , transformers
                     , trifecta
                     , vector
                     , raw-strings-qq

executable minecart
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , minecart

test-suite minecart-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base
                     , minecart
                     , hspec
                     , aeson
